Fixed some bugs on mobile

--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -40,6 +40,14 @@
         font-size: 50px;
         transition: opacity 0.1s linear;
 
+        @media (max-width: 800px) {
+          & {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
+        }
+
         &.deactive {
           opacity: 0;
         }
